--- a/java/war/DriveWireTest.html
+++ b/java/war/DriveWireTest.html
@@ -18,7 +18,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>DriveWire Server</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
